kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hypertube
  labels:
    name: hypertube
    app: hypertube-app
